# CC-DataAnalysisAgent

./: .data-analysis-agent.toml  .env.example  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
docs/: AI_REFERENCE.md  API.md  DESIGN.md  FEATURES.md  TASKS.md
examples/: test_dynamic_charts.py
src/data_analysis_agent/: __init__.py  __main__.py
src/data_analysis_agent/core/: __init__.py  chart_renderer.py  config.py  excel_reader.py  exceptions.py  logging_config.py  reader_manager.py  toon_serializer.py
src/data_analysis_agent/mcp/: server.py
src/data_analysis_agent/mcp/tools/: analyze.py  analyze_all_dimensions.py  batch_get_chart_data.py  generate_chart_html.py  get_chart_data.py  get_excel_info.py  get_excel_schema.py  get_reader_stats.py  read_head_excel.py  read_tail_excel.py  session_end.py  session_start.py
