[project]
name = "data-analysis-agent"
version = "0.7.0"
description = "MCP Server for Excel data analysis and chart generation"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "pandas>=2.1.0",
    "openpyxl>=3.1.0",
]

[project.scripts]
data-analysis-agent = "data_analysis_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
