[project]
name = "data-analysis-agent"
version = "0.11.0"
description = "MCP Server for Excel data analysis and chart generation with TOON format support"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "pandas>=2.1.0",
    "openpyxl>=3.1.0",
    "tomli>=2.0.0",
]

[project.scripts]
data-analysis-agent = "data_analysis_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
