[project]
name = "data-analysis-agent"
version = "0.13.0"
description = "MCP Server for Excel data analysis and chart generation with TOON format support"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "pandas>=2.1.0",
    "openpyxl>=3.1.0",
    "tomli>=2.0.0",
]

[project.scripts]
data-analysis-agent = "data_analysis_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ==================== 代码格式化配置 ====================

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["data_analysis_agent"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503", "E501"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "*.egg-info",
]
per-file-ignores = [
    "__init__.py:F401",
]

# ==================== 类型检查配置 ====================

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # 逐步启用
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "openpyxl.*",
    "mcp.*",
]
ignore_missing_imports = true

# ==================== 测试配置 ====================

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
